# hail-rust-decoder

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  data
.cargo/: config.toml
cli/: Cargo.toml  build.rs
cli/src/: benchmark.rs  cli.rs  clickhouse.rs  cluster.rs  config.rs  env.rs  lib.rs  main.rs
cli/src/cloud/: gcp.rs  mod.rs  pool.rs  startup.rs
cli/src/distributed/: coordinator.rs  message.rs  metrics_db.rs  mod.rs  pool_wrappers.rs  worker.rs
cli/src/export/: bigquery.rs  clickhouse.rs  hail.rs  json.rs  mod.rs
cli/src/genomic/: async_client.rs  extract.rs  mod.rs
cli/src/ingest/: manhattan.rs  mod.rs
cli/src/ingest/sql/: gene_associations.sql
cli/src/manhattan/: aggregate.rs  annotate.rs  batch.rs  data.rs  gene_writer.rs  genes.rs  layout.rs  loci_writer.rs  locus.rs  mod.rs  pipeline.rs  qq_writer.rs  reference.rs  sig_writer.rs
cli/static/: dashboard.html  index.html  phenotypes.html
core/: Cargo.toml
core/src/: hail_adapter.rs  lib.rs  partitioning.rs  progress.rs
core/src/buffer/: block_map.rs  builder.rs  mod.rs  zstd.rs
core/src/codec/: encoded_type.rs
core/src/index/: mod.rs  reader.rs
core/src/io/: writer.rs
core/src/metadata/: structures.rs
core/src/parquet/: builder.rs  converter.rs  mod.rs  writer.rs
core/src/query/: engine.rs  intervals.rs  mod.rs  pruning.rs  types.rs
core/src/schema/: mod.rs
core/src/summary/: mod.rs
core/src/validation/: mod.rs
core/src/vcf/: reader.rs
examples/: decode_gene_table.rs  demo.sh
examples/intervals/: README.md  test_genes.bed  test_genes.json  test_genes.txt
examples/schemas/: genomics_validation.json  prep_table.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/manhattan/: ManhattanViewer.css  ManhattanViewer.tsx  index.ts  types.ts
frontend/src/manhattan/components/: Tooltip.tsx  YAxis.tsx
frontend/src/manhattan/hooks/: useHitDetection.ts
pool/: Cargo.toml
pool/src/: lib.rs  traits.rs
pool/src/cloud/: mod.rs
pool/src/distributed/: coordinator.rs  message.rs  mod.rs  worker.rs
scripts/: cargo-worker
src/: benchmark.rs  cli.rs  clickhouse.rs  cluster.rs  config.rs  datasource.rs  env.rs  error.rs  hail_adapter.rs  lib.rs  main.rs
src/buffer/: block.rs  blocking.rs  builder.rs  leb128.rs  mod.rs  output.rs  slice.rs  stream_block.rs  zstd.rs
src/cloud/: gcp.rs  mod.rs  pool.rs  startup.rs
src/codec/: decoder.rs  encoded_type.rs  encoder.rs  etype_parser.rs  mod.rs
src/distributed/: coordinator.rs  message.rs  metrics_db.rs  mod.rs  worker.rs
src/export/: bigquery.rs  clickhouse.rs  hail.rs  json.rs  mod.rs
src/genomic/: extract.rs  mod.rs
src/index/: metadata.rs  mod.rs  node.rs  reader.rs
src/ingest/: manhattan.rs  mod.rs  schema.rs
src/ingest/sql/: loci.sql  loci_variants.sql  phenotype_plots.sql  qq_points.sql  significant_variants.sql
src/io/: adapter.rs  mod.rs  writer.rs
src/manhattan/: aggregate.rs  annotate.rs  batch.rs  config.rs  data.rs  gene_writer.rs  genes.rs  layout.rs  loci_writer.rs  locus.rs  mod.rs  pipeline.rs  qq_writer.rs  reference.rs  render.rs  sig_writer.rs
src/metadata/: mod.rs  structures.rs
src/parquet/: converter.rs  mod.rs  schema.rs  writer.rs
src/query/: compare.rs  engine.rs  filter.rs  intervals.rs  join.rs  mod.rs  pruning.rs  stream.rs  types.rs
src/summary/: schema.rs  stats.rs
src/validation/: mod.rs
src/vcf/: codec.rs  mod.rs  reader.rs  schema.rs  writer.rs
static/: dashboard.html  phenotypes.html
test_hail_data/: 01_single_int.py  02_primitives.py  03_simple_array.py  04_simple_struct.py  05_interval_like.py  06_interval_plus_array.py  07_nullable_array.py  08_nullable_struct.py  09_simple_set.py  10_simple_dict.py  README.md  create_all_tables.sh  pyproject.toml  setup_test_tables.sh
tests/: debug_array_position_test.rs  debug_byte_positions_test.rs  debug_row_decoding.rs  decode_array_properly_test.rs  decode_array_test.rs  decode_complete_row_test.rs  decode_exons_array_test.rs  decode_globals_test.rs  decode_rows_test.rs  decode_with_encoded_type_test.rs  integration_test.rs  test_01_single_int.rs  test_03_simple_array.rs  test_07_nullable_array.rs  test_08_nullable_struct.rs  test_09_simple_set.rs  test_10_simple_dict.rs  test_array_decode_complete.rs  test_decode_with_parsed_metadata.rs  test_etype_parser_with_metadata.rs  test_index_reader.rs  test_interval_decode_detailed.rs  test_nested_struct_decoding.rs  test_partition_pruning.rs  test_query_engine.rs  test_simple_generated_table.rs  test_struct_nullable_bitmap.rs  test_with_leb128_fixed.rs  verify_bitmap_size.rs
