[package]
name = "hail-decoder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Pure Rust decoder for Hail table format"
license = "MIT OR Apache-2.0"

[features]
default = []
bigquery = ["google-cloud-bigquery", "google-cloud-auth"]

[dependencies]
# Compression
zstd = "0.13"

# Arrow and Parquet
arrow = "53.3"
parquet = "53.3"

# Cloud storage
object_store = { version = "0.11", features = ["gcp", "aws", "http"] }
url = "2.5"
bytes = "1.9"
futures = "0.3"
once_cell = "1.19"

# Parsing
nom = "7.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
flate2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"

# JSON Schema validation
jsonschema = "0.27"

# Random sampling
rand = "0.8"

# Progress bars
indicatif = "0.17"

# VCF Support
noodles = { version = "0.91", features = ["vcf", "tabix", "bgzf", "core"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP Server
axum = "0.7"
axum-extra = { version = "0.9", features = ["query"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
async-stream = "0.3"
tokio-stream = "0.1"

# HTTP Client (for ClickHouse export)
reqwest = { version = "0.11", features = ["blocking"] }

# UUID generation (for temp files)
uuid = { version = "1.0", features = ["v4"] }

# Google Cloud (for BigQuery export - optional)
google-cloud-bigquery = { version = "0.13", optional = true }
google-cloud-storage = "0.22"
google-cloud-auth = { version = "0.19", optional = true }

[[bin]]
name = "hail-server"
path = "src/bin/hail-server.rs"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

# Benchmarks will be added later
# [[bench]]
# name = "decoder_bench"
# harness = false
