[package]
name = "hail-decoder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Pure Rust decoder for Hail table format"
license = "MIT OR Apache-2.0"

[features]
default = ["gcp", "validation"]

# Cloud storage backends (via object_store)
gcp = ["object_store/gcp"]
aws = ["object_store/aws"]
http = ["object_store/http"]

# Optional commands
validation = ["dep:jsonschema"]
clickhouse = []  # reqwest is now always included for distributed workers
bigquery = ["gcp", "dep:google-cloud-bigquery", "dep:google-cloud-storage", "dep:google-cloud-auth"]
benchmark = ["dep:sysinfo"]

# HTTP server binary (axum is always included for distributed coordinator)
server = ["dep:axum-extra", "dep:tower-http", "dep:async-stream", "dep:tokio-stream"]

# All features
full = ["gcp", "aws", "http", "validation", "clickhouse", "bigquery", "server", "benchmark"]

[dependencies]
# Compression
zstd = "0.13"

# Arrow and Parquet
arrow = "53.3"
parquet = "53.3"

# Cloud storage (features enabled above)
object_store = { version = "0.11", default-features = false }
url = "2.5"
bytes = "1.9"
futures = "0.3"
once_cell = "1.19"

# Parsing
nom = "7.1"

# Async runtime (needed for object_store cloud backends)
tokio = { version = "1.35", features = ["rt-multi-thread", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
flate2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"

# Memory mapping for local file optimization
memmap2 = "0.9"

# Random sampling
rand = "0.8"

# Progress bars
indicatif = "0.17"

# CLI
clap = { version = "4.4", features = ["derive"] }
owo-colors = "4"

# VCF Support
noodles = { version = "0.91", features = ["vcf", "tabix", "bgzf", "core", "csi"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation (for temp files)
uuid = { version = "1.0", features = ["v4"] }

# === Optional dependencies ===

# JSON Schema validation (validation feature)
jsonschema = { version = "0.27", default-features = false, optional = true }

# HTTP Client for distributed worker and ClickHouse export
# Use rustls for TLS to avoid OpenSSL cross-compilation issues
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Google Cloud for BigQuery export (bigquery feature)
google-cloud-bigquery = { version = "0.13", optional = true }
google-cloud-storage = { version = "0.22", optional = true }
google-cloud-auth = { version = "0.19", optional = true }

# HTTP Server for distributed coordinator (and optional hail-server)
axum = "0.7"

# Additional HTTP server features (server feature)
axum-extra = { version = "0.9", features = ["query"], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
async-stream = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }

# System metrics (benchmark feature)
sysinfo = { version = "0.32", optional = true }

[[bin]]
name = "hail-server"
path = "src/bin/hail-server.rs"
required-features = ["server"]

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

# Benchmarks will be added later
# [[bench]]
# name = "decoder_bench"
# harness = false
